Add sass to file package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test:html",
-    "test:html": "glob-run nu-html-checker *.html"
+    "test:html": "glob-run nu-html-checker *.html",
+
+    "build:sass": "sass --sourcemap=none --update sass:css",
+  "build:autoprefixer": "autoprefixer-cli css/style.css",
   },
   "repository": {
     "type": "git",
