--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "npm run test:html",
     "test:html": "glob-run nu-html-checker *.html",
 
-    "build:sass": "sass --sourcemap=none --update sass:css",
-  "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "build": "npm run build:sass && npm run build:autoprefixer && npm run test",
+  "build:sass": "sass --sourcemap=none --update sass:css",
+  "build:autoprefixer": "autoprefixer-cli css/style.css"
   },
   "repository": {
     "type": "git",
